--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="./imagenes/icono.png">
 </head>
 <body>
+    <header>
+        <h1>HTML y Python</h1>
+        <p>
+            Esta Página explica las etiquetas de HTML y código de Python
+        </p>
+    </header>
     
 </body>
 </html>
