--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             Esta Página explica las etiquetas de HTML y código de Python
         </p>
     </header>
+    <main>
+        <section>
+            <h2>1. HTML</h2>
+            <p>
+                HTML (Hypertext Markup Language) es un lenguaje de codificación que se utiliza para crear y estructurar páginas web. Es el componente básico de la web y se considera el lenguaje universal para compartir información. 
+            </p>
+            <img src="./imagenes/html.png" alt="Imagen de lenguaje HTML ">
+        </section>
+    </main>
     
 </body>
 </html>
