agregamos section Python

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             </p>
             <img src="./imagenes/html.png" alt="Imagen de lenguaje HTML ">
         </section>
+        <section>
+            <h2>2. Python</h2>
+            <p>
+                Python es un lenguaje de programación de alto nivel, interpretado y de código abierto, conocido por su sintaxis clara y legible, que se asemeja al lenguaje natural, lo que facilita su aprendizaje y uso. 
+            </p>
+            <img src="./imagenes/python.jpeg" alt="Imagen del lengua Python">
+        </section>
+
     </main>
     
 </body>
