agregamos Enlaces con texto e imagen

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <h2>4. Enlaces</h2>
             <p>Para crear enlaces a otras páginas se usa la etiqueta <code>&lt;a&gt;</code>:</p>
             <code>&lt;a href="https://www.python.org"&gt;Visitar Python&lt;/a&gt;</code>
+            <a href="https://www.python.org">Link a Página de Python con texto</a>
+            <a href="https://www.python.org">
+                <img src="./imagenes/python.jpeg" alt="link página de python">
+            </a>
             <img src="enlaces.png" alt="Ejemplo de enlaces en HTML">
         </section>
         
@@ -111,7 +115,7 @@
         <p>&copy; 2025 - Página de Aprendizaje de HTML y Python</p>
     </footer>
 
-    </main>
+  
     
 </body>
 </html>
