--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <h2>5. Listas</h2>
             <p>Ejemplo de una lista con temas de Python:</p>
             <ul>
+                <!-- agregar enlaces a cada item de las listas a contenidos 
+                relacionados -->
                 <li>Variables y Tipos de Datos</li>
                 <li>Estructuras de Control</li>
                 <li>Funciones</li>
